--- a/news_aggregator_frontend/news_aggregator/frontend/templates/index.html
+++ b/news_aggregator_frontend/news_aggregator/frontend/templates/index.html
@@ -2,3 +2,13 @@
 
 {% block page_title %}Index{% endblock page_title %}
 
+{% block content %}
+    <div class="container pt-3">
+        <form method="POST" action="{% url 'login' %}">
+            {{ login_form }}
+
+            <button type="submit">Log in</button>
+        </form>
+    </div>
+
+{% endblock content %}
