development Progress with forms, templates, internal backend client and more

--- a/news_aggregator/frontend/templates/base.html
+++ b/news_aggregator/frontend/templates/base.html
@@ -1,5 +1,5 @@
+<!DOCTYPE html>
 {% load static %}
-<doctype html>
 <html>
 <head>
     <title>{% block page_title %}{% endblock %} - News Aggregator</title>
